# qview-plus-win-fork

./: .gitignore  AI_RENAME_FIX_DOCUMENTATION.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: qt_viewer_build.yml
qt_image_viewer/: CMakeLists.txt
qt_image_viewer/src/: imagemodel.cpp  imagemodel.h  imageviewer.cpp  imageviewer.h  mainwindow.cpp  mainwindow.h
src/: actionmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  qvaiqnadialog.cpp  qvaiqnadialog.h  qvaitoolsdialog.cpp  qvaitoolsdialog.h  qvapplication.cpp  qvapplication.h  qvgallerydialog.cpp  qvgallerydialog.h  qvgallerysidebar.cpp  qvgallerysidebar.h  shortcutmanager.cpp
